--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
+    "lint": "eslint .",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,9 +13,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.9"
+    "eslint": "7.30.0",
+    "nodemon": "2.0.9"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "4.17.1"
   }
 }
